[build-system]
requires = ["setuptools >= 42", "versioningit >= 2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "potdata"
authors = [{name = "Mingjian Wen", email = "wenxx151@gmail.com"}]
description = "Potdata: a Python package for orchestrating data for developing interatomic potentials."
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "scipy",
]

[project.optional-dependencies]
test = ["pytest"]
doc = ["jupyter-book","ipython"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.ruff]
ignore = ["E501"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

